--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Service Marketplace</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      padding: 20px;
-    }
-    h1 {
-      color: #2a9d8f;
-    }
-  </style>
 </head>
 <body>
 
-<h1>Marketplace работает 🚀</h1>
-<p>Mini App успешно запущен</p>
+<h2>Разместить заказ</h2>
+
+<input id="title" placeholder="Название услуги"><br><br>
+<textarea id="desc" placeholder="Описание"></textarea><br><br>
+<button onclick="sendOrder()">Отправить</button>
 
 <script>
   const tg = window.Telegram.WebApp;
   tg.expand();
-  console.log(tg.initDataUnsafe.user);
+
+  const API_URL = https://script.google.com/macros/s/AKfycbyce_0aVg5wEpZEZdK8vNUFiXni6XRfSY-EfhuNoRzq8St8x2FR3CCgbdA2pzQcoSnTGg/exec;
+
+  function sendOrder() {
+    fetch(API_URL, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        telegram_id: tg.initDataUnsafe.user.id,
+        role: "customer",
+        title: document.getElementById("title").value,
+        description: document.getElementById("desc").value
+      })
+    }).then(() => alert("Заказ отправлен 🚀"));
+  }
 </script>
 
 </body>
