--- a/index.html
+++ b/index.html
@@ -1,23 +1,68 @@
-<script>
-document.getElementById('submit-button').addEventListener('click', function() {
-    const title = document.getElementById('title-input').value;
-    const description = document.getElementById('description-input').value;
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Маркетплейс задач</title>
+    <style>
+        body { font-family: Arial; padding: 20px; }
+        input, button { margin: 5px 0; padding: 8px; width: 100%; max-width: 400px; }
+        ul { list-style: none; padding-left: 0; }
+        li { background: #f0f0f0; margin: 5px 0; padding: 8px; border-radius: 5px; }
+    </style>
+</head>
+<body>
+    <h2>Создать задачу</h2>
+    <input id="title" placeholder="Название услуги">
+    <input id="description" placeholder="Примечание">
+    <button id="submit">Отправить</button>
 
-    fetch('http://127.0.0.1:8000/api/jobs/', {
-        method: 'POST',
-        headers: {
-            'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({
-            title: title,
-            description: description
-        })
-    })
-    .then(response => response.json())
-    .then(data => {
-        alert('Услуга добавлена!');
-        console.log(data);
-    })
-    .catch(error => console.error('Ошибка:', error));
-});
-</script>
+    <h2>Список задач (для исполнителей)</h2>
+    <ul id="tasks"></ul>
+
+    <script>
+        // === Telegram Bot API настройки ===
+        const BOT_TOKEN = "8512972671:AAHKjr5FX6W1rDaAkt0M4h1LdY-ii-BElco";
+        const CHAT_ID = "5950245139";
+
+        // Простое хранение задач в браузере (можно позже сделать через сервер)
+        let tasks = [];
+
+        function renderTasks() {
+            const list = document.getElementById("tasks");
+            list.innerHTML = "";
+            tasks.forEach(task => {
+                const li = document.createElement("li");
+                li.textContent = `${task.title}: ${task.description}`;
+                list.appendChild(li);
+            });
+        }
+
+        async function sendToTelegram(task) {
+            const text = `Новая задача:\n${task.title}\n${task.description}`;
+            const url = `https://api.telegram.org/bot${BOT_TOKEN}/sendMessage?chat_id=${CHAT_ID}&text=${encodeURIComponent(text)}`;
+            try {
+                await fetch(url);
+            } catch (err) {
+                console.error("Ошибка отправки в Telegram:", err);
+            }
+        }
+
+        document.getElementById("submit").addEventListener("click", () => {
+            const title = document.getElementById("title").value.trim();
+            const description = document.getElementById("description").value.trim();
+            if (!title) return alert("Введите название услуги");
+
+            const task = { title, description };
+            tasks.push(task);
+            renderTasks();
+            sendToTelegram(task);
+
+            document.getElementById("title").value = "";
+            document.getElementById("description").value = "";
+        });
+
+        // Инициализация
+        renderTasks();
+    </script>
+</body>
+</html>
