--- a/index.html
+++ b/index.html
@@ -5,15 +5,29 @@
 <title>Маркетплейс задач</title>
 <style>
 body { font-family: Arial; padding: 20px; }
-input, button { margin: 5px 0; padding: 8px; width: 100%; max-width: 400px; }
+input, button, select, textarea { margin: 5px 0; padding: 8px; width: 100%; max-width: 400px; }
 ul { list-style: none; padding-left: 0; }
 li { background: #f0f0f0; margin: 5px 0; padding: 8px; border-radius: 5px; }
 </style>
 </head>
 <body>
-<h2>Создать задачу</h2>
-<input id="title" placeholder="Название услуги">
-<input id="description" placeholder="Примечание">
+<h2>Создать заказ</h2>
+
+<label>Выберите услугу:</label>
+<select id="service">
+  <option value="Сантехника">Сантехника</option>
+  <option value="Мелкий бытовой ремонт">Мелкий бытовой ремонт</option>
+</select>
+
+<label>Полное описание задачи:</label>
+<textarea id="description" placeholder="Укажите, что именно необходимо сделать" rows="4"></textarea>
+
+<label>Стоимость услуги (UZS):</label>
+<input id="price" type="number" placeholder="Сумма в узбекских суммах">
+
+<label>Контактный телефон:</label>
+<input id="contact" type="tel" placeholder="+998...">
+
 <button id="submit">Отправить</button>
 
 <h2>Список задач (для исполнителей)</h2>
@@ -21,9 +35,95 @@ li { background: #f0f0f0; margin: 5px 0; padding: 8px; border-radius: 5px; }
 
 <script>
 const BOT_TOKEN = "8512972671:AAHKjr5FX6W1rDaAkt0M4h1LdY-ii-BElco";
-const CHAT_ID = "5950245139";
+const ADMIN_CHAT_ID = "5950245139"; // админский чат
 
-// Получение последних сообщений от бота
+let orderCounter = 0;
+
+// Функция отправки заявки
+async function sendTask(service, description, price, contact) {
+    orderCounter++;
+    const orderNumber = `#${orderCounter.toString().padStart(3,'0')}`;
+    const status = "В ожидании подтверждения";
+
+    // Сообщение для админа с кнопкой подтверждения
+    const url = `https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`;
+    const payloadAdmin = {
+        chat_id: ADMIN_CHAT_ID,
+        text: `Новая заявка ${orderNumber}:\nУслуга: ${service}\nОписание: ${description}\nЦена: ${price} UZS\nКонтакт: ${contact}\nСтатус: ${status}`,
+        reply_markup: JSON.stringify({
+            inline_keyboard: [
+                [{ text: "Подтвердить заявку", callback_data: `confirm_${orderNumber}` }]
+            ]
+        })
+    };
+
+    // Сообщение для заказчика (на этот же чат)
+    const textToUser = `Ваша заявка ${orderNumber} принята.\nСтатус: ${status}`;
+
+    try {
+        // Отправка админу
+        await fetch(url, {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(payloadAdmin)
+        });
+        // Отправка пользователю
+        await fetch(url + `?chat_id=${ADMIN_CHAT_ID}&text=${encodeURIComponent(textToUser)}`);
+    } catch(err) {
+        console.error("Ошибка отправки задачи:", err);
+    }
+
+    return orderNumber;
+}
+
+// Обработка кнопок подтверждения (CallbackQuery)
+async function processCallbackQuery() {
+    const updatesUrl = `https://api.telegram.org/bot${BOT_TOKEN}/getUpdates`;
+    try {
+        const res = await fetch(updatesUrl);
+        const data = await res.json();
+        data.result.forEach(async update => {
+            if(update.callback_query) {
+                const cb = update.callback_query;
+                if(cb.data.startsWith("confirm_")) {
+                    const orderNumber = cb.data.replace("confirm_", "");
+                    const textToUser = `Ваша заявка ${orderNumber} подтверждена администратором.`;
+                    
+                    // отправка уведомления пользователю
+                    await fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage?chat_id=${ADMIN_CHAT_ID}&text=${encodeURIComponent(textToUser)}`);
+
+                    // ответ на callback (чтобы кнопка исчезла)
+                    await fetch(`https://api.telegram.org/bot${BOT_TOKEN}/answerCallbackQuery?callback_query_id=${cb.id}&text=Заявка подтверждена`);
+                }
+            }
+        });
+    } catch(err) {
+        console.error("Ошибка обработки CallbackQuery:", err);
+    }
+}
+
+document.getElementById("submit").addEventListener("click", async () => {
+    const service = document.getElementById("service").value;
+    const description = document.getElementById("description").value.trim();
+    const price = document.getElementById("price").value.trim();
+    const contact = document.getElementById("contact").value.trim();
+
+    if(!description || !price || !contact) return alert("Заполните все поля");
+
+    const orderNumber = await sendTask(service, description, price, contact);
+    alert(`Ваша заявка ${orderNumber} отправлена!`);
+
+    document.getElementById("description").value = "";
+    document.getElementById("price").value = "";
+    document.getElementById("contact").value = "";
+
+    fetchTasks();
+});
+
+// Периодическое получение новых CallbackQuery
+setInterval(processCallbackQuery, 5000);
+
+// Получение списка задач (для демонстрации)
 async function fetchTasks() {
     const url = `https://api.telegram.org/bot${BOT_TOKEN}/getUpdates`;
     try {
@@ -31,10 +131,8 @@ async function fetchTasks() {
         const data = await res.json();
         const list = document.getElementById("tasks");
         list.innerHTML = "";
-
-        // Проходим по всем сообщениям
         data.result.forEach(update => {
-            if(update.message && update.message.chat.id == CHAT_ID) {
+            if(update.message && update.message.chat.id == ADMIN_CHAT_ID) {
                 const li = document.createElement("li");
                 li.textContent = update.message.text;
                 list.appendChild(li);
@@ -45,32 +143,7 @@ async function fetchTasks() {
     }
 }
 
-// Отправка новой задачи
-async function sendTask(title, description) {
-    const text = `Новая задача:\n${title}\n${description}`;
-    const url = `https://api.telegram.org/bot${BOT_TOKEN}/sendMessage?chat_id=${CHAT_ID}&text=${encodeURIComponent(text)}`;
-    try {
-        await fetch(url);
-    } catch(err) {
-        console.error("Ошибка отправки задачи:", err);
-    }
-}
-
-// Кнопка отправки
-document.getElementById("submit").addEventListener("click", async () => {
-    const title = document.getElementById("title").value.trim();
-    const description = document.getElementById("description").value.trim();
-    if(!title) return alert("Введите название услуги");
-    await sendTask(title, description);
-    document.getElementById("title").value = "";
-    document.getElementById("description").value = "";
-    fetchTasks();
-});
-
-// Инициализация
 fetchTasks();
-
-// Обновление списка каждые 5 секунд
 setInterval(fetchTasks, 5000);
 </script>
 </body>
