--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Маркетплейс задач</title>
+<title>Маркетплейс задач — DEMO</title>
 
 <style>
 body {
     font-family: Arial, sans-serif;
-    background: #f7f7f7;
+    background: #f6f6f6;
     padding: 16px;
 }
 
@@ -60,23 +60,18 @@ button {
     cursor: pointer;
 }
 
-button:active {
-    opacity: 0.9;
+button:disabled {
+    background: #9ecdf0;
+    cursor: not-allowed;
 }
 
-ul {
-    list-style: none;
-    padding: 0;
+.status {
+    margin-top: 12px;
+    font-size: 15px;
+    text-align: center;
 }
-
-li {
-    background: #f0f0f0;
-    padding: 12px;
-    border-radius: 10px;
-    margin-bottom: 10px;
-    font-size: 14px;
-    white-space: pre-wrap;
-}
+.success { color: green; }
+.error { color: red; }
 </style>
 </head>
 
@@ -112,17 +107,83 @@ li {
 
     <div class="block">
         <button id="submit">Отправить заявку</button>
+        <div id="status" class="status"></div>
     </div>
-
-    <h2>Заявки для исполнителей</h2>
-
-    <ul id="tasks"></ul>
 
 </div>
 
-<!-- JS КОД БЕЗ ИЗМЕНЕНИЙ -->
 <script>
-/* твой JS код без изменений */
+/* ===== DEMO НАСТРОЙКИ (ЗАВТРА УБЕРЁМ В DJANGO) ===== */
+const BOT_TOKEN = "8512972671:AAHKjr5FX6W1rDaAkt0M4h1LdY-ii-BElco";
+const ADMIN_CHAT_ID = "5950245139";
+
+/* ===== ЛОГИКА DEMO ===== */
+let orderCounter = 0;
+
+async function sendTask(service, description, price, contact) {
+    orderCounter++;
+    const orderNumber = "#" + orderCounter.toString().padStart(3, "0");
+
+    const payload = {
+        chat_id: ADMIN_CHAT_ID,
+        text:
+`Новая заявка ${orderNumber}
+Услуга: ${service}
+Описание: ${description}
+Цена: ${price} UZS
+Контакт: ${contact}
+Статус: В ожидании подтверждения`,
+        reply_markup: JSON.stringify({
+            inline_keyboard: [
+                [{ text: "Подтвердить заявку", callback_data: "confirm_" + orderNumber }]
+            ]
+        })
+    };
+
+    await fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(payload)
+    });
+
+    return orderNumber;
+}
+
+/* ===== КНОПКА ===== */
+document.getElementById("submit").addEventListener("click", async () => {
+    const btn = document.getElementById("submit");
+    const status = document.getElementById("status");
+
+    const service = document.getElementById("service").value;
+    const description = document.getElementById("description").value.trim();
+    const price = document.getElementById("price").value.trim();
+    const contact = document.getElementById("contact").value.trim();
+
+    if (!description || !price || !contact) {
+        status.textContent = "Заполните все поля";
+        status.className = "status error";
+        return;
+    }
+
+    btn.disabled = true;
+    status.textContent = "Отправка заявки...";
+    status.className = "status";
+
+    try {
+        const orderNumber = await sendTask(service, description, price, contact);
+        status.textContent = `Заявка ${orderNumber} успешно отправлена`;
+        status.className = "status success";
+
+        document.getElementById("description").value = "";
+        document.getElementById("price").value = "";
+        document.getElementById("contact").value = "";
+    } catch (e) {
+        status.textContent = "Ошибка отправки. Попробуйте позже.";
+        status.className = "status error";
+    }
+
+    btn.disabled = false;
+});
 </script>
 
 </body>
